--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@pusher/pusher-websocket-react-native": "^1.1.1",
     "react": "18.1.0",
     "react-native": "0.70.6"
   },
